[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/mainmenu.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.129412, 0.0313726, 0.0313726, 0.14902 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="mainmenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.44354
margin_top = -1.62903
margin_right = -2.44354
margin_bottom = -1.62903
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -125.0
margin_top = 466.0
margin_right = 124.0
margin_bottom = -16.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="join" type="Button" parent="VBoxContainer"]
margin_right = 249.0
margin_bottom = 57.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 1 )
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="host" type="Button" parent="VBoxContainer"]
margin_top = 61.0
margin_right = 249.0
margin_bottom = 118.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 1 )
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_bottom = 1.0
margin_right = 171.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="VBoxContainer2"]
margin_right = 171.0
margin_bottom = 147.0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
texture_normal = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer2/TextureButton"]
margin_left = 12.2176
margin_top = 13.8466
margin_right = 52.2176
margin_bottom = 27.8466
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton2" type="TextureButton" parent="VBoxContainer2"]
margin_top = 151.0
margin_right = 171.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
texture_normal = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer2/TextureButton2"]
margin_left = 19.5481
margin_top = 12.2176
margin_right = 59.5481
margin_bottom = 43.2176
text = "2
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton3" type="TextureButton" parent="VBoxContainer2"]
margin_top = 302.0
margin_right = 171.0
margin_bottom = 449.0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
texture_normal = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer2/TextureButton3"]
margin_left = 21.9916
margin_top = 13.8466
margin_right = 61.9916
margin_bottom = 27.8466
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton4" type="TextureButton" parent="VBoxContainer2"]
margin_top = 453.0
margin_right = 171.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
texture_normal = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer2/TextureButton4"]
margin_left = 17.1046
margin_top = 8.95953
margin_right = 57.1046
margin_bottom = 39.9595
text = "4
"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="VBoxContainer/host" to="." method="_on_host_pressed"]
[connection signal="toggled" from="VBoxContainer2/TextureButton" to="." method="_on_TextureButton_toggled" binds= [ "\"godot1\"" ]]
